# originium

./: .gitignore  Cargo.toml  README.md
docs/: readme.md
src/: errors.rs  lib.rs  main.rs
src/custom_tasks/: mod.rs
src/custom_tasks/natural_language/: block_blm_jsonl2freq.rs  block_blm_jsonl2mmap.rs  mod.rs  rwkv_jsonl2binidx.rs  rwkv_jsonl2mmap.rs  rwkv_mmap2debug.rs
src/custom_tasks/protein_language/: mod.rs  ncbi_nr_eukaryota_fasta2redis.rs  ncbi_nr_mixture_redis2redis.rs  ncbi_nr_singletons_tsv2redis.rs  ncbi_nr_softlabels_jsonl2redis.rs  ncbi_nr_softlabels_redis2mmap.rs
src/custom_tasks/protein_language/ncbi_genome/: mixture_redis2redis.rs  mod.rs  singletons_fasta2redis.rs  softlabels_jsonl2redis.rs  softlabels_redis2mmap.rs
src/custom_tasks/protein_language/ncbi_nr/: eukaryota_fasta2redis.rs  mixture_redis2redis.rs  mod.rs  singletons_tsv2redis.rs  softlabels_jsonl2redis.rs  softlabels_redis2mmap.rs
src/readers/: fasta.rs  jsonl.rs  line.rs  line_reader.rs  mmap.rs  mod.rs  redis.rs  sql.rs  tsv.rs  xml.rs
src/utils/: common_type.rs  load_toml.rs  mod.rs
src/utils/tokenizer/: mod.rs  trie.rs
src/writers/: debug.rs  fasta.rs  line.rs  line_writer.rs  mmap.rs  mod.rs  redis.rs  rwkv_binidx.rs  sql.rs  xml.rs
